# smoltext

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  smoltext
fonts/: __init__.py  _emoji.py  _fancy.py  _handwriting.py  _italic.py  _smallcaps.py  _subscript.py  bold.py  demonic.py  emoji.py  fancy.py  handwriting.py  italic.py  smallcaps.py  subscript.py
smoltext/: __init__.py  __main__.py  console_script.py  smoltext.py
smoltext/fonts/: italic.py  monospace.py
tables/: __init__.py  _bold.py  _demonic.py  _fancy.py  _smallcaps.py
