[metadata]
name = smoltext
version = 1.4.7
author = Sofi
description = A font converter utility with the extra fonts included in utf8.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = "https://gitlab.com/imsofi/smoltext/"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
scripts =
    smoltext
python_requires = >=3.6
