[metadata]
name = smoltext
version = 1.4.9
author = Sofi
author_email = sofi+smoltext@mailbox.org
url = "https://git.sr.ht/~sofi/smoltext"
license = MIT
description = A font converter utility with the extra fonts included in utf8.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    smoltext = smoltext:main
